Completed main name-column selector.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--Import styling information -->
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:50,100,200,300,400,500,600,700,800|Nunito:50,100,200,300,400,500,600,700,800" rel="stylesheet"/>
+    <link rel="stylesheet" href="dependencies/awesomplete/awesomplete.css" />
 
     <!--Import jquery from dependencies folder -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
@@ -14,17 +15,24 @@
     <script src="dependencies/jquery-easing.js"></script>
     <script src="dependencies/jquery-rotate.js"></script>
     <script src="dependencies/jquery-ui.js"></script>
+    <script src="dependencies/awesomplete/awesomplete.js"></script>
     <script src="jquery-scripts.js"></script>
     <script>if (window.module) module = window.module;</script>
 
     <!--jquery code-->
     <script>
       $(document).ready(function(){
+         awesomplete = new Awesomplete(document.getElementById('name-input-field'));
+         awesomplete.list = ["test1","test2","test3"];
          if (process.platform == 'darwin'){
             $("#topbar").attr("id","draggable-topbar");
          };
-         if (appStorage.get('excel-file-directory') == "no file selected"){
+         if (appStorage.has('excel-file-directory') && (appStorage.get('excel-file-directory') == "no file selected")){
             $("#no-file-selected").show();
+            $("div.name-selection").hide();
+         }
+         else{
+            loadExcelNames();
          }
          $("#preferences-button").click(function(){
             showPreferences();
@@ -34,27 +42,24 @@
             hidePreferences();
             if (appStorage.get('excel-file-directory') == "no file selected"){
                $("#no-file-selected").show();
+               $("div.name-selection").hide();
             }
             else{
                $("#no-file-selected").hide();
+               $("div.name-selection").show();
+               loadExcelNames();
             }
          });
          $("#preferences-pane .bottom button.cancel").click(function(){
             alert("No preferences were saved.");
-            hidePreferences();
-            if (appStorage.get('excel-file-directory') == "no file selected"){
-               $("#no-file-selected").show();
-            }
-            else{
-               $("#no-file-selected").hide();
-            }
+            hidePreferences()
          });
          $("#preferences-button").rotate({bind:{
             mouseover: function(){
                $(this).rotate({
                   angle: 0,
                   animateTo: 45
-               });
+               })
             }
          }});
          $("#file-select-button").click(function(){
@@ -62,6 +67,16 @@
          })
          $("#no-file-selected button").click(function(){
             showPreferences();
+         });
+         $(".name-selection .top .lowbar form").bind('submit',function(){
+            if ($(".name-selection .top .lowbar input:text").val() != ''){
+               $(".name-selection .top ol").append("<li>" + $(".name-selection .top .lowbar input:text").val() + "</li>");
+               $(".name-selection .top .lowbar input:text").val('');
+            }
+            $(".name-selection .top li").click(function(){
+               $(this).remove();
+            });
+            return false;
          });
       })
    </script>
@@ -80,6 +95,24 @@
            <div class="button-wrapper">
              <button>preferences</button>
           </div>
+        </div>
+        <div class = "name-selection">
+           <div class = "top">
+             <div class="topbar">
+                <h3>Clients to certify:</h3>
+             </div>
+             <ol>
+             </ol>
+             <div class = "lowbar">
+                <form>
+                   <input type="text" id="name-input-field" placeholder="Enter client names here."/>
+                   <input class = "hidden" type="submit"/>
+                </form>
+             </div>
+           </div>
+           <div class = "bottom">
+             <button>Certify</button>
+           </div>
         </div>
      </div>
      <div id="bottombar">
