--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <p>Settings</p>
          </div>
         </div>
-        <div class="body">
+        <div class="body" id = "mainprefsec">
            <table>
              <tr><td>
                 <h1>Excel File</h1>
@@ -379,8 +379,6 @@
                <div id="mediumspacer"></div>
              </td></tr>
            </table>
-        </div>
-        <div class="body">
         </div>
         <div class="bottom">
            <table>
